# Game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  drawBox.cpp  game.cpp  simulation.cpp  simulation.h  video.cpp  video.h
sandbox/: people.py  people.torch.py  requirements.txt
